--- a/vpn.html
+++ b/vpn.html
@@ -136,6 +136,19 @@
 						<span class="menu--label" key="record">Record Settings</span>
 					</a>
 				</li>
+			<li class="menu--item  menu--item__has_sub_menu">
+					<label class="menu--link" title="Network Settings">
+					<span class="menu--label" key="cam_sett">Cameras Settings</span>
+					</label>
+					<ul class="sub_menu">
+						<li class="sub_menu--item">
+							<a href="camera1_settings.html" class="sub_menu--link">Camera 1</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="camera2_settings.html" class="sub_menu--link">Camera 2</a>
+						</li>
+					</ul>
+				</li>				
 			<li class="menu--item">
 					<a href="rtsp_stream.html" class="menu--link" title="Stream">
 
