--- a/camera2_settings.html
+++ b/camera2_settings.html
@@ -6,6 +6,9 @@
 	<meta http-equiv="X-UA_compatible"content ="ei=edge">
 	
 	<script type="text/javascript" src="js/cookies_handler.js" defer></script>
+	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<script type="text/javascript" src="js/handler.js" defer></script>
 	<script type="text/javascript" src="js/cam2_handler.js" defer></script>
 	<script type="text/javascript" src="js/vertical-responsive-menu.min.js" defer></script>
