--- a/service.html
+++ b/service.html
@@ -4,16 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA_compatible"content ="ei=edge">
-
+	
 	<script type="text/javascript" src="js/cookies_handler.js" defer></script>
-
+	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/vertical-responsive-menu.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script type="text/javascript" src="js/handler.js" defer></script>
 	
 	<script type="text/javascript" src="js/service-handle.js" defer=""></script>
 	<script type="text/javascript" src="js/vertical-responsive-menu.min.js" defer=""></script>
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
 
 	<title>Quant DVR</title>
 
