--- a/camera1_settings.html
+++ b/camera1_settings.html
@@ -69,6 +69,7 @@
 				</div>
 				
 				<div class="canvas-field">
+					<h1 class = "sub_translate" key="utc">UTC Controller</h1>
 					<div class="controller">
 						<img src="img/controller/image_part_001.png" alt="">
 						<img id="top_cam" src="img/controller/image_part_002.png" alt="">
