--- a/camera2_settings.html
+++ b/camera2_settings.html
@@ -66,6 +66,7 @@
 					<p style="text-align: center;" id="set_cam2" class="content_main" key="cam2">Camera 2</p>
 				</div>
 				<div class="canvas-field">
+				<h1 class = "sub_translate" key="utc">UTC Controller</h1>
 					<div class="controller">
 						<img src="img/controller/image_part_001.png" alt="">
 						<img id="top_cam" src="img/controller/image_part_002.png" alt="">
@@ -82,7 +83,7 @@
 						<img src="img/controller/image_part_009.png" alt="">
 					</div>
 				</div> 
-				
+
 			</div>
 		</div>
 
