--- a/camera2_settings.html
+++ b/camera2_settings.html
@@ -65,24 +65,40 @@
 
 					<p style="text-align: center;" id="set_cam2" class="content_main" key="cam2">Camera 2</p>
 				</div>
-				<div class="canvas-field">
-				<h1 class = "sub_translate" key="utc">UTC Controller</h1>
-					<div class="controller">
+				<div id="canvas_field" class="canvas-field">
+					<h1 class = "sub_translate" key="utc">UTC Controller</h1>
+					<div id="contr1" class="controller">
 						<img src="img/controller/image_part_001.png" alt="">
 						<img id="top_cam" src="img/controller/image_part_002.png" alt="">
 						<img src="img/controller/image_part_003.png" alt="">
 					</div>
-					<div class="controller">
+					<div id="contr2" class="controller">
 						<img id="left_cam" src="img/controller/image_part_004.png" alt="">
 						<img id="middle_cam" src="img/controller/image_part_005.png" alt="">
 						<img id="right_cam" src="img/controller/image_part_006.png" alt="">
 					</div>
-					<div class="controller">
+					<div id="contr3" class="controller">
 						<img src="img/controller/image_part_007.png" alt="">
 						<img id="down_cam" src="img/controller/image_part_008.png" alt="">
 						<img src="img/controller/image_part_009.png" alt="">
 					</div>
-				</div> 
+					
+					<div id="top_click" style="display: none; padding-right: 4.1px; padding-top: 1px;" >
+						<img src="img/controller/top.png" alt="" width="250px">
+					</div>
+					<div id="right_click" style="display: none; margin-right: 4.1px; padding-bottom: 3px;" >
+						<img src="img/controller/right.png" alt="" width="250px">
+					</div>
+					<div id="mid_click" style="display: none; margin-right: 4.1px;" >
+						<img src="img/controller/mid.png" alt="" width="250px">
+					</div>
+					<div id="left_click" style="display: none; margin-right: 4.1px;" >
+						<img src="img/controller/left.png" alt="" width="250px">
+					</div>
+					<div id="bot_click" style="display: none; margin-right: 4.1px;" >
+						<img src="img/controller/bot.png" alt="" width="250px">
+					</div>
+				</div>
 
 			</div>
 		</div>
