--- a/web.html
+++ b/web.html
@@ -73,7 +73,8 @@
 </div>
 
 
-<nav class="vertical_nav">
+
+		<nav class="vertical_nav">
 			<ul id="js-menu" class="menu">
 				<h2>Quant DVR</h2>
 				<hr>
@@ -111,13 +112,13 @@
 				</li>
 
 				<li class="menu--item">
-					<a href="record.html" class="menu--link" title="Record">
+					<a href="record.html" class="menu--link" title="Record Settings">
 
 						<span class="menu--label" key="record">Record Settings</span>
 					</a>
 				</li>
 			<li class="menu--item  menu--item__has_sub_menu">
-					<label class="menu--link" title="Network Settings">
+					<label class="menu--link" title="Cameras Settings">
 					<span class="menu--label" key="cam_sett">Cameras Settings</span>
 					</label>
 					<ul class="sub_menu">
@@ -128,40 +129,46 @@
 							<a href="camera2_settings.html" class="sub_menu--link sub_translate" key="cam2">Camera 2</a>
 						</li>
 					</ul>
-				</li>			
+				</li>
 			<li class="menu--item">
-					<a href="rtsp_stream.html" class="menu--link" title="Stream">
+					<a href="rtsp_stream.html" class="menu--link" title="RTSP Stream">
 
 						<span class="menu--label" key="rtsp">RTSP Stream</span>
 					</a>
 			</li>
 				<li class="menu--item">
-					<a href="osd.html" class="menu--link" title="OSD">
+					<a href="osd.html" class="menu--link" title="OSD Settings">
 
 						<span class="menu--label" key="osd">OSD</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="cofdm.html" class="menu--link" title="Online Stream">
+					<a href="cofdm.html" class="menu--link" title="COFDM settings">
 
 						<span class="menu--label" key="cofdm">COFDM settings</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="sheduler.html" class="menu--link" title="Delayed Start">
+					<a href="gsm_gps.html" class="menu--link" title="GSM/GPS Settings">
+
+						<span class="menu--label" key="gsm">GSM/GPS settings</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="sheduler.html" class="menu--link" title="Sheduler settings">
 
 						<span class="menu--label" key="shed">Sheduler</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="storage.html" class="menu--link" title="Storage">
+					<a href="storage.html" class="menu--link" title="Storage settings">
 
 						<span class="menu--label" key="stor">Storage</span>
 					</a>
 				</li>
 	
 				<li class="menu--item  menu--item__has_sub_menu">
-					<label class="menu--link" title="Network Settings">
+					<label class="menu--link" title="Download Files MicroSD/eMMC">
 					<span class="menu--label" key="dow_file">Download Files</span>
 					</label>
 					<ul class="sub_menu">
@@ -174,13 +181,13 @@
 					</ul>
 				</li>
 				<li class="menu--item">
-					<a href="service.html" class="menu--link" title="Device Info">
+					<a href="service.html" class="menu--link" title="Service">
 
 						<span class="menu--label" key="serv">Service</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="customize.html" class="menu--link" title="Service">
+					<a href="customize.html" class="menu--link" title="Customize">
 
 						<span class="menu--label" key="cust">Customize</span>
 					</a>
