--- a/camera1_settings.html
+++ b/camera1_settings.html
@@ -85,7 +85,7 @@
 						<img id="down_cam" src="img/controller/image_part_008.png" alt="">
 						<img src="img/controller/image_part_009.png" alt="">
 					</div>
-					
+
 					<div id="top_click" style="display: none; padding-right: 4.1px; padding-top: 1px;" >
 						<img src="img/controller/top.png" alt="" width="250px">
 					</div>
@@ -117,7 +117,7 @@
 				</li>
 				<li class="menu--item  menu--item__has_sub_menu">
 					<label class="menu--link" title="Network Settings">
-						<span class="menu--label" key="net_s">Network Settings</span>
+					<span class="menu--label" key="net_s">Network Settings</span>
 					</label>
 
 					<ul class="sub_menu">
@@ -143,58 +143,64 @@
 				</li>
 
 				<li class="menu--item">
-					<a href="record.html" class="menu--link" title="Record">
+					<a href="record.html" class="menu--link" title="Record Settings">
 
 						<span class="menu--label" key="record">Record Settings</span>
 					</a>
 				</li>
-				<li class="menu--item menu--item__has_sub_menu menu--subitens__opened">
-					<label class="menu--link" title="Network Settings">
-						<span class="menu--label" key="cam_sett">Cameras Settings</span>
+			<li class="menu--item menu--item__has_sub_menu menu--subitens__opened">
+					<label class="menu--link" title="Cameras Settings">
+					<span class="menu--label" key="cam_sett">Cameras Settings</span>
 					</label>
 					<ul class="sub_menu">
 						<li class="sub_menu--item active">
-							<a href="camera1_settings.html" class="sub_menu--link sub_translate" key="cam1">Camera 1</a>
+							<a href="camera1_settings.html" class="sub_menu--link sub_translate" key="cam1"> Camera 1</a>
 						</li>
 						<li class="sub_menu--item">
 							<a href="camera2_settings.html" class="sub_menu--link sub_translate" key="cam2">Camera 2</a>
 						</li>
 					</ul>
 				</li>
-				<li class="menu--item">
-					<a href="rtsp_stream.html" class="menu--link" title="Stream">
+			<li class="menu--item">
+					<a href="rtsp_stream.html" class="menu--link" title="RTSP Stream">
 
 						<span class="menu--label" key="rtsp">RTSP Stream</span>
 					</a>
-				</li>
+			</li>
 				<li class="menu--item">
-					<a href="osd.html" class="menu--link" title="OSD">
+					<a href="osd.html" class="menu--link" title="OSD Settings">
 
 						<span class="menu--label" key="osd">OSD</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="cofdm.html" class="menu--link" title="Online Stream">
+					<a href="cofdm.html" class="menu--link" title="COFDM settings">
 
 						<span class="menu--label" key="cofdm">COFDM settings</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="sheduler.html" class="menu--link" title="Delayed Start">
+					<a href="gsm_gps.html" class="menu--link" title="GSM/GPS Settings">
+
+						<span class="menu--label" key="gsm">GSM/GPS settings</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="sheduler.html" class="menu--link" title="Sheduler settings">
 
 						<span class="menu--label" key="shed">Sheduler</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="storage.html" class="menu--link" title="Storage">
+					<a href="storage.html" class="menu--link" title="Storage settings">
 
 						<span class="menu--label" key="stor">Storage</span>
 					</a>
 				</li>
-
+	
 				<li class="menu--item  menu--item__has_sub_menu">
-					<label class="menu--link" title="Network Settings">
-						<span class="menu--label" key="dow_file">Download Files</span>
+					<label class="menu--link" title="Download Files MicroSD/eMMC">
+					<span class="menu--label" key="dow_file">Download Files</span>
 					</label>
 					<ul class="sub_menu">
 						<li class="sub_menu--item">
@@ -206,13 +212,13 @@
 					</ul>
 				</li>
 				<li class="menu--item">
-					<a href="service.html" class="menu--link" title="Device Info">
+					<a href="service.html" class="menu--link" title="Service">
 
 						<span class="menu--label" key="serv">Service</span>
 					</a>
 				</li>
 				<li class="menu--item">
-					<a href="customize.html" class="menu--link" title="Service">
+					<a href="customize.html" class="menu--link" title="Customize">
 
 						<span class="menu--label" key="cust">Customize</span>
 					</a>
