--- a/record.html
+++ b/record.html
@@ -45,7 +45,7 @@
  </button>
 -->
 
-<div class="main">
+<div class="main" >
 	<div class="padding-container"></div>
 	
 	<div class="rec_head">
@@ -64,7 +64,7 @@
 			</div>
 
 			<div>
-				<select id="rec_mode" name="rec-mode-sel">
+				<select id="rec_mode_sd" name="rec-mode-sel">
 					<option class="content_rec" key="fill" value="fill">FILL</option>
 					<option class="content_rec" key="loop" value="loop">LOOP</option>
 				</select>
@@ -83,7 +83,7 @@
 			</div>
 
 			<div>
-				<select id="time" name="time-division-sel">
+				<select id="time_sd" name="time-division-sel">
 					<option class="content_rec" key="5min" value="5min">5-min</option>
 					<option class="content_rec" key="10min" value="10min">10 Min</option>
 					<option class="content_rec" key="30min" value="30min">30 Min</option>
@@ -170,160 +170,134 @@
 		</div>
 	</div>
 
-	<div class="container-rec">
-		<div>
-			<p class="content_rec" key="cam_volt">Cameras voltage:</p>
-		</div>
-		<div>
-			<select id="cam_volt" name="cam-tvoltage-sel">
-				
-			</select>
-		</div>
-	</div>
-	<div class="container-rec">
-		<div>
-			<p class="content_rec" key="cam1">Camera 1</p>
-		</div>
-		<div id="toggles">
-			<label class="switch">
-				<input type="checkbox" id="en_cam1" checked>
-				<span></span> 
-			</label>
-		</div>
-	</div>
-	<div class="container-rec">
-		<div>
-			<p class="content_rec" key="cam2">Camera 2</p>
-		</div>
-		<div id="toggles">
-			<label class="switch">
-				<input type="checkbox" id="en_cam2" checked>
-				<span></span> 
-			</label>
-		</div>
-	</div>
 	<div class="footer">
 		<div></div>
 		<div></div>
 		<div class="apply">
-			<button class="btn-control sub_translate" key="apply" id="send" type="">Apply</button>
+			<button class="btn-control sub_translate" key="apply" id="rec_send" type="">Apply</button>
 		</div>
 	</div>
 
-	<nav class="vertical_nav">
-		<ul id="js-menu" class="menu">
-			<h2>Quant DVR</h2>
-			<hr>
-			<li class="menu--item">
-				<a id="main" href="index.html" class="menu--link" title="Main">
+		<nav class="vertical_nav">
+			<ul id="js-menu" class="menu">
+				<h2>Quant DVR</h2>
+				<hr>
+				<li class="menu--item">
+					<a id="main" href="index.html" class="menu--link" title="Main">
 
-					<span class="menu--label" key="main">Main</span>
-				</a>
-			</li>
-			<li class="menu--item menu--item__has_sub_menu">
-				<label class="menu--link" title="Network Settings">
+						<span class="menu--label" key="main">Main</span>
+					</a>
+				</li>
+				<li class="menu--item  menu--item__has_sub_menu">
+					<label class="menu--link" title="Network Settings">
 					<span class="menu--label" key="net_s">Network Settings</span>
-				</label>
+					</label>
 
-				<ul class="sub_menu">
-					<li class="sub_menu--item">
-						<a href="wlan.html" class="sub_menu--link">WLAN</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="proxy.html" class="sub_menu--link">Proxy</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="web.html" class="sub_menu--link">Web</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="vpn.html" class="sub_menu--link">VPN</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
-					</li>	
-				</ul>
-			</li>
+					<ul class="sub_menu">
+						<li class="sub_menu--item">
+							<a href="wlan.html" class="sub_menu--link">WLAN</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="proxy.html" class="sub_menu--link">Proxy</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="web.html" class="sub_menu--link">Web</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="vpn.html" class="sub_menu--link">VPN</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
+						</li>	
+					</ul>
+				</li>
 
-			<li class="menu--item active">
-				<a href="record.html" class="menu--link" title="Record">
+				<li class="menu--item active">
+					<a href="record.html" class="menu--link" title="Record Settings">
 
-					<span class="menu--label" key="record">Record Settings</span>
-				</a>
-			</li>
+						<span class="menu--label" key="record">Record Settings</span>
+					</a>
+				</li>
 			<li class="menu--item  menu--item__has_sub_menu">
-				<label class="menu--link" title="Network Settings">
+					<label class="menu--link" title="Cameras Settings">
 					<span class="menu--label" key="cam_sett">Cameras Settings</span>
-				</label>
-				<ul class="sub_menu">
-					<li class="sub_menu--item">
-						<a href="camera1_settings.html" class="sub_menu--link sub_translate" key="cam1"> Camera 1</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="camera2_settings.html" class="sub_menu--link sub_translate" key="cam2">Camera 2</a>
-					</li>
-				</ul>
-			</li>				
+					</label>
+					<ul class="sub_menu">
+						<li class="sub_menu--item">
+							<a href="camera1_settings.html" class="sub_menu--link sub_translate" key="cam1"> Camera 1</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="camera2_settings.html" class="sub_menu--link sub_translate" key="cam2">Camera 2</a>
+						</li>
+					</ul>
+				</li>
 			<li class="menu--item">
-				<a href="rtsp_stream.html" class="menu--link" title="Stream">
+					<a href="rtsp_stream.html" class="menu--link" title="RTSP Stream">
 
-					<span class="menu--label" key="rtsp">RTSP Stream</span>
-				</a>
+						<span class="menu--label" key="rtsp">RTSP Stream</span>
+					</a>
 			</li>
-			<li class="menu--item">
-				<a href="osd.html" class="menu--link" title="OSD">
+				<li class="menu--item">
+					<a href="osd.html" class="menu--link" title="OSD Settings">
 
-					<span class="menu--label" key="osd">OSD</span>
-				</a>
-			</li>
-			<li class="menu--item">
-				<a href="cofdm.html" class="menu--link" title="Online Stream">
+						<span class="menu--label" key="osd">OSD</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="cofdm.html" class="menu--link" title="COFDM settings">
 
-					<span class="menu--label" key="cofdm">COFDM settings</span>
-				</a>
-			</li>
-			<li class="menu--item">
-				<a href="sheduler.html" class="menu--link" title="Delayed Start">
+						<span class="menu--label" key="cofdm">COFDM settings</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="gsm_gps.html" class="menu--link" title="GSM/GPS Settings">
 
-					<span class="menu--label" key="shed">Sheduler</span>
-				</a>
-			</li>
-			<li class="menu--item">
-				<a href="storage.html" class="menu--link" title="Storage">
+						<span class="menu--label" key="gsm">GSM/GPS settings</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="sheduler.html" class="menu--link" title="Sheduler settings">
 
-					<span class="menu--label" key="stor">Storage</span>
-				</a>
-			</li>
-			
-			<li class="menu--item  menu--item__has_sub_menu">
-				<label class="menu--link" title="Network Settings">
+						<span class="menu--label" key="shed">Sheduler</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="storage.html" class="menu--link" title="Storage settings">
+
+						<span class="menu--label" key="stor">Storage</span>
+					</a>
+				</li>
+	
+				<li class="menu--item  menu--item__has_sub_menu">
+					<label class="menu--link" title="Download Files MicroSD/eMMC">
 					<span class="menu--label" key="dow_file">Download Files</span>
-				</label>
-				<ul class="sub_menu">
-					<li class="sub_menu--item">
-						<a href="download_ext.html" class="sub_menu--link">MicroSD</a>
-					</li>
-					<li class="sub_menu--item">
-						<a href="download_int.html" class="sub_menu--link">eMMC</a>
-					</li>
-				</ul>
-			</li>
-			<li class="menu--item">
-				<a href="service.html" class="menu--link" title="Device Info">
+					</label>
+					<ul class="sub_menu">
+						<li class="sub_menu--item">
+							<a href="download_ext.html" class="sub_menu--link">MicroSD</a>
+						</li>
+						<li class="sub_menu--item">
+							<a href="download_int.html" class="sub_menu--link">eMMC</a>
+						</li>
+					</ul>
+				</li>
+				<li class="menu--item">
+					<a href="service.html" class="menu--link" title="Service">
 
-					<span class="menu--label" key="serv">Service</span>
-				</a>
-			</li>
-			<li class="menu--item">
-				<a href="customize.html" class="menu--link" title="Service">
+						<span class="menu--label" key="serv">Service</span>
+					</a>
+				</li>
+				<li class="menu--item">
+					<a href="customize.html" class="menu--link" title="Customize">
 
-					<span class="menu--label" key="cust">Customize</span>
-				</a>
-			</li>
-		</ul>
-	</nav>
+						<span class="menu--label" key="cust">Customize</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
 </div>
 </body>
 </html>
